--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
-<html lang="en" layout:decorator="/layout">
+<html lang="en" layout:decorator="/layout" ng-app="ciTrackApp">
 <head>
 </head>
-<body>
+<body ng-controller="CiTrackController">
 	<div>
 		<div layout:fragment="sidebar">
 		<!-- 	<div class="panel panel-primary">
@@ -89,16 +89,21 @@
 			</div> -->
 		</div>
 		<div layout:fragment="content">
+			<div
+			th:replace="/message/validation.error.message :: validationErrorMessage" />
+			
 			<p class="pull-right visible-xs">
 				<button type="button" class="btn btn-primary btn-xs"
 					data-toggle="offcanvas">Toggle nav</button>
 			</p>
 			<div class="jumbotron">
+				jlkk
+				<ci-text-field id="name" ci-form="bSignupForm" placeholder="enter name"  ng-model="name"/>
 				<div class="form-group">
 					<input type="text" class="form-control input-lg"
 						ng-model="search.main"
 						uib-typeahead="key for key in getSearchKey($viewValue) | limitTo:10"
-						placeholder="Search doctor by Name, Speclization, City"
+						placeholder="Search doctor by Name, Speclization, City jjkjk"
 						id="inputSuccess2"
 						typeahead-on-select="doSimpleSearch($item, $model, $label, $event, 0)" />
 					<span class="glyphicon glyphicon-search form-control-feedback"></span>
