--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -367,10 +367,13 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <script src="../../assets/js/vendor/holder.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+	<script th:src="@{/lib/angularjs/angular.min.js}"></script>
+	<script th:src="@{/lib/bootstrap-3.3.7-dist/js/bootstrap.min.js}"></script>
+	<script th:src="@{/lib/bootstrap-3.3.7-dist/js/ui-bootstrap-tpls-1.3.0.min.js}"></script>
+	<script th:src="@{/custom/js/utils/UtilsService.js}"></script>
+	<script th:src="@{/custom/js/utils/utils.js}"></script>
+	<script th:src="@{/custom/js/component/component.js}"></script>
+	<script th:src="@{/custom/js/ciTrackController.js}"></script>
+	
   </body>
 </html>
