--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -13,8 +13,10 @@
 
     !-- Bootstrap core CSS -->
 	<link th:href="@{/lib/bootstrap-3.3.7-dist/css/bootstrap.min.css}" rel="stylesheet" />
-	<link th:href="@{/lib/bootstrap-3.3.7-dist//css/bootstrap-theme.min.css}"
-		rel="stylesheet" />
+	<link th:href="@{/lib/bootstrap-3.3.7-dist//css/bootstrap-theme.min.css}" rel="stylesheet" />
+	
+	!-- Metro Bootstrap CSS -->
+	<link th:href="@{/lib/metro/metro-bootstrap.css}" rel="stylesheet" />
 	
 	<!--Select2 CSS -->
 	<link th:href="@{/select2-4.0.2/dist/css/select2.min.css}"
@@ -368,6 +370,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script th:src="@{/lib/angularjs/angular.min.js}"></script>
+	<script th:src="@{/lib/angularjs/angular-messages.min.js}"></script>
 	<script th:src="@{/lib/bootstrap-3.3.7-dist/js/bootstrap.min.js}"></script>
 	<script th:src="@{/lib/bootstrap-3.3.7-dist/js/ui-bootstrap-tpls-1.3.0.min.js}"></script>
 	<script th:src="@{/custom/js/utils/UtilsService.js}"></script>
