--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -95,7 +95,7 @@
 					data-toggle="offcanvas">Toggle nav</button>
 			</p>
 			<div class="jumbotron">
-				jlkk
+				<a th:href="@{/patient/add}"> ADD PATIENT</a>
 				<ng-form name="textFieldForm">
 					<div
 			th:replace="/message/validation.error.message :: validationErrorMessage" />
