--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -11,7 +11,7 @@
    
     <title>Dashboard Template for Bootstrap</title>
 
-    !-- Bootstrap core CSS -->
+    <!-- Bootstrap core CSS -->
 	<link th:href="@{/lib/bootstrap-3.3.7-dist/css/bootstrap.min.css}" rel="stylesheet" />
 	<link th:href="@{/lib/bootstrap-3.3.7-dist//css/bootstrap-theme.min.css}" rel="stylesheet" />
 	
@@ -377,6 +377,7 @@
 	<script th:src="@{/custom/js/utils/utils.js}"></script>
 	<script th:src="@{/custom/js/component/component.js}"></script>
 	<script th:src="@{/custom/js/ciTrackController.js}"></script>
+	<script th:src="@{/custom/js/patientController.js}"></script>
 	
   </body>
 </html>
