--- a/src/main/resources/templates/patient/add.html
+++ b/src/main/resources/templates/patient/add.html
@@ -8,18 +8,20 @@
 	<div layout:fragment="content">
 		<h3>Add patient</h3>
 		<hr/>
-		<form class="form-horizontal" name="textFieldForm" ng-submit="addPatient(patient)">
+		<!--  -->
+		<form class="form-horizontal" name="textFieldForm" ng-submit="submit(textFieldForm);addPatient(patient, textFieldForm)">
 		  <div th:replace="/message/validation.error.message :: validationErrorMessage" />
 		  <div class="form-group">
 		    <label for="firstName" class="col-sm-2 control-label">First name</label>
 		    <div class="col-sm-10">
-		      <ci-text-field placeholder="Enter first name"  ng-model="patient.firstName" name="firstName"/>
+		      <ci-text-field placeholder="Enter first name"  ng-model="patient.firstName" 
+		      name="firstName" errormessage="firstNameErrorMessage" />
 		    </div>
 		  </div>
 		  <div class="form-group">
 		    <label for="lastName" class="col-sm-2 control-label">Last name</label>
 		    <div class="col-sm-10">
-		      <ci-text-field placeholder="Enter last name"  ng-model="patient.lastName" name="lastName"/>
+		      <ci-text-field placeholder="Enter last name"  ng-model="patient.lastName" name="lastName" errormessage="lastNameErrorMessage" />
 		    </div>
 		  </div>
 		  <div class="form-group">
@@ -38,7 +40,8 @@
 		  <div class="form-group">
 		    <label for="address" class="col-sm-2 control-label">Address</label>
 		    <div class="col-sm-10">
-		      <ci-text-field placeholder="Enter address"  ng-model="patient.address" name="address"/>
+		     <!--  <ci-text-field placeholder="Enter address"  ng-model="patient.address" name="address"/> -->
+		      <ci-text-area placeholder="Enter address"  ng-model="patient.address" name="address" rows="3" cols="20" errormessage="addressErrorMessage" />
 		    </div>
 		  </div>
 		  <div class="form-group">
