--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -378,6 +378,6 @@
 	<script th:src="@{/custom/js/component/component.js}"></script>
 	<script th:src="@{/custom/js/ciTrackController.js}"></script>
 	<script th:src="@{/custom/js/patientController.js}"></script>
-	
+	<script th:src="@{/custom/js/prescriptionController.js}"></script>
   </body>
 </html>
