--- a/src/main/resources/templates/prescription/add.html
+++ b/src/main/resources/templates/prescription/add.html
@@ -11,10 +11,10 @@
 		<!--  -->
 		<form class="form-horizontal" name="textFieldForm" ng-submit="submit(textFieldForm);addPrescription(prescription, textFieldForm)">
 		  <div th:replace="/message/validation.error.message :: validationErrorMessage" />
-		  <div class="form-group">
+		  <!-- <div class="form-group">
 		    <label for="address" class="col-sm-2 control-label">Description</label>
 		    <div class="col-sm-10">
-		     <!--  <ci-text-field placeholder="Enter address"  ng-model="patient.address" name="address"/> -->
+		      <ci-text-field placeholder="Enter address"  ng-model="patient.address" name="address"/>
 		      <ci-text-area placeholder="Enter description"  ng-model="prescription.description" name="description" rows="3" cols="20" errormessage="descriptionErrorMessage" />
 		    </div>
 		  </div>
@@ -30,7 +30,22 @@
 		    <div class="col-sm-offset-2 col-sm-10">
 		      <button type="submit" class="btn btn-default" >ADD</button>
 		    </div>
-		  </div>
+		    
+		  </div> -->
+		  <table>
+			    <tr>
+			    	<th>Description</th>
+			    	<th>Dose</th>
+			    </tr>
+			    <tr>
+			    	<td>
+			    		<ci-text-field placeholder="Enter address"  ng-model="patient.address" name="address"/>
+			    	</td>
+			    	<td>
+			    		<ci-text-field placeholder="Enter address"  ng-model="patient.address" name="address"/>
+			    	</td>
+			    </tr>
+		    </table>
 		</form>
 	</div>
 </body>
