--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -136,7 +136,7 @@
 			<h1 th:text="${#authentication.name}">Hello
 				[[${#httpServletRequest.remoteUser}]]!</h1> -->
 
-			
+			<script th:src="@{/custom/js/ciTrackController.js}"></script>
 		</div>
 	</div>
 </body>
