--- a/src/main/resources/templates/patient/add.html
+++ b/src/main/resources/templates/patient/add.html
@@ -50,6 +50,8 @@
 		    </div>
 		  </div>
 		</form>
+		
+		<script th:src="@{/custom/js/patientController.js}"></script>
 	</div>
 </body>
 </html>
