--- a/src/main/resources/templates/prescription/add.html
+++ b/src/main/resources/templates/prescription/add.html
@@ -7,7 +7,7 @@
 	</div>
 	<div layout:fragment="content">
 		<h3>Add Prescription</h3>
-		
+		 
 		<!--  -->
 		<form class="form-horizontal" name="textFieldForm" ng-submit="submit(textFieldForm);addPrescription(prescription, textFieldForm)">
 		  <div th:replace="/message/validation.error.message :: validationErrorMessage" />
@@ -36,31 +36,42 @@
 			    <tr>
 			    	<th>Description</th>
 			    	<th>Dose</th>
+			    	<th></th>
 			    </tr>
-			    <tr>
+			    <tr ng-repeat="pres in prescriptionItem">
 			    	<td>
-			    		<ci-text-field placeholder="Enter address"  ng-model="patient.address" name="address"/>
+			    		<ci-text-field placeholder="Medication description"  ng-model="pres.description" name="description" />
 			    	</td>
 			    	<td>
 			    		<label class="radio-inline">
-						  <input type="radio" name="doseOptions" id="doseOptions111" ng-model="dose" value="1+1+1" /> 1+1+1
+						  <input type="radio" name="doseOptions{{$index}}" id="doseOptions111" ng-model="pres.dose" value="1+1+1" /> 1+1+1
 						</label>
 						<label class="radio-inline">
-						  <input type="radio" name="doseOptions" id="doseOptions101"  ng-model="dose" value="1+0+1" /> 1+0+1
+						  <input type="radio" name="doseOptions{{$index}}" id="doseOptions101"  ng-model="pres.dose" value="1+0+1" /> 1+0+1
 						</label>
 						<label class="radio-inline">
-						  <input type="radio" name="doseOptions" id="doseOptions100" ng-model="dose" value="1+0+0" /> 1+0+0
+						  <input type="radio" name="doseOptions{{$index}}" id="doseOptions100" ng-model="pres.dose" value="1+0+0" /> 1+0+0
 						</label>
 						<label class="radio-inline">
-						  <input type="radio" name="doseOptions" id="doseOptions010" ng-model="dose" value="0+1+0" /> 0+1+0
+						  <input type="radio" name="doseOptions{{$index}}" id="doseOptions010" ng-model="pres.dose" value="0+1+0" /> 0+1+0
 						</label>
 						<label class="radio-inline">
-						  <input type="radio" name="doseOptions" id="doseOptions001" ng-model="dose" value="0+0+1" /> 0+0+1
+						  <input type="radio" name="doseOptions{{$index}}" id="doseOptions001" ng-model="pres.dose" value="0+0+1" /> 0+0+1
 						</label>
+						<label class="radio-inline">
+						  <input type="radio" name="doseOptions{{$index}}" id="doseOptionsOthers" ng-model="pres.dose" value="others" /> others
+						</label>
+						<label class="radio-inline" ng-if="pres.dose=='others'">
+							<input type="text" name="doseOthers{{$index}}" id="doseOthers" ng-model="pres.others"  />
+						</label>
+			    	</td>
+			    	<td>
+			    		<button ng-if="$index+1 == prescriptionItem.length" ng-click="addMoreMedication()" type="submit" class="btn btn-default" >More >></button>
 			    	</td>
 			    </tr>
 		    </table>
 		</form>
+		<script th:src="@{/custom/js/prescriptionController.js}"></script>
 	</div>
 </body>
 </html>
