--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -97,6 +97,7 @@
 			<div class="jumbotron">
 				<a th:href="@{/patient/add}"> ADD PATIENT</a><br/>
 				<a th:href="@{/prescription/add}"> ADD PRE</a>
+				<a th:href="@{/user/add}"> ADD USER</a>
 				<ng-form name="textFieldForm">
 					<div
 			th:replace="/message/validation.error.message :: validationErrorMessage" />
