--- a/src/main/resources/templates/message/validation.error.message.html
+++ b/src/main/resources/templates/message/validation.error.message.html
@@ -14,4 +14,19 @@
 			Please, enter address.
   		</div>
 </script>
+<script type="text/ng-template" id="drQualificationsErrorMessage">
+  		<div ng-message="mandatory" class="notice marker-on-top bg-darkRed fg-white" style='padding: 5px;margin-top:6px'>
+			Please, doctor qualifications.
+  		</div>
+</script>
+<script type="text/ng-template" id="userNameErrorMessage">
+  		<div ng-message="mandatory" class="notice marker-on-top bg-darkRed fg-white" style='padding: 5px;margin-top:6px'>
+			Please, choose user name.
+  		</div>
+</script>
+<script type="text/ng-template" id="passwordErrorMessage">
+  		<div ng-message="mandatory" class="notice marker-on-top bg-darkRed fg-white" style='padding: 5px;margin-top:6px'>
+			Please, choose password.
+  		</div>
+</script>
 </div>
