--- a/src/main/resources/templates/user/add.html
+++ b/src/main/resources/templates/user/add.html
@@ -14,46 +14,48 @@
 		    <div class="form-group">
 		    <label for="address" class="col-sm-2 control-label">Title</label>
 		    <div class="col-sm-10">
-		      <select ng-model="user.title" name="title" ng-options="t for t in titles"></select>
+		      <select ng-init="user.title='Dr.'" class="form-control" ng-model="user.title" name="title" ng-options="t for t in titles"></select>
 		    </div>
 		  </div>
 		   <div class="form-group">
 		    <label for="address" class="col-sm-2 control-label">First Name</label>
 		    <div class="col-sm-10">
-		      <ci-text-field placeholder="Enter first name"  ng-model="user.firstName" name="firstName"
+		      <ci-text-field type="text" placeholder="Enter first name"  ng-model="user.firstName" name="firstName"
 		       errormessage="firstNameErrorMessage" />
 		    </div>
 		  </div>
 		  <div class="form-group">
 		    <label for="firstName" class="col-sm-2 control-label">Last Name</label>
 		    <div class="col-sm-10">
-		      <ci-text-field placeholder="Enter last name"  ng-model="user.lastName" 
+		      <ci-text-field type="text" placeholder="Enter last name"  ng-model="user.lastName" 
 		      name="lastName" errormessage="lastNameErrorMessage" />
 		    </div>
 		  </div>
 		  <div class="form-group">
 		    <label for="firstName" class="col-sm-2 control-label">Designation</label>
 		    <div class="col-sm-10">
-		      <select ng-model="user.designation" name="title" ng-options="d for d in designations"></select>
+		      <select ng-init="user.designation='Doctor'" class="form-control" ng-model="user.designation" name="title" ng-options="d for d in designations"></select>
 		    </div>
 		  </div>
 		  <div class="form-group" ng-if="user.designation=='Doctor'">
 		    <label for="firstName" class="col-sm-2 control-label">Doctor's qualifications</label>
 		    <div class="col-sm-10">
-		      <ci-text-area placeholder="Enter doctors qualifications(e.g. BSC health, MBBS, FCPS , etc)"  ng-model="user.drqualifications" 
+		      <ci-text-area type="text" placeholder="Enter doctors qualifications(e.g. BSC health, MBBS, FCPS , etc)"  ng-model="user.drqualifications" 
 		      name="drQualifications" errormessage="drQualificationsErrorMessage" cols="30" rows="4"/>
 		    </div>
 		  </div>
 		  <div class="form-group">
 		    <label for="firstName" class="col-sm-2 control-label">Choose user name</label>
 		    <div class="col-sm-10">
-		      <input type="text" ng-model="user.username" name="userName" />
+		      <ci-text-field type="text" ng-model="user.userName" name="userName" 
+		      errormessage="userNameErrorMessage" placeholder="Choose user name" />
 		    </div>
 		  </div>
 		  <div class="form-group">
 		    <label for="firstName" class="col-sm-2 control-label">Choose password</label>
 		    <div class="col-sm-10">
-		      <input type="password" ng-model="user.password" name="password" />
+		      <ci-text-field type="password" ng-model="user.password" name="password" 
+		      errormessage="passwordErrorMessage" placeholder="Choose password" />
 		    </div>
 		  </div>
 		  <div class="form-group">
