--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -90,12 +90,13 @@
 
     <div class="container">
 
-      <div th:if="${param.error}">Invalid username and password.</div>
-				<form th:action="@{/}" class="form-signin" method="post">
+      
+	  <form th:action="@{/}" class="form-signin" method="post">
         <h2 class="form-signin-heading">CI TRACK sign in</h2>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="username" name="username" class="form-control" placeholder="Email address" required="" autofocus="" />
-        <label for="inputPassword" class="sr-only">Password</label>
+        <div th:if="${param.error}">Invalid username and password.</div>
+        <label for="username" class="sr-only">User name</label>
+        <input type="text" id="username" name="username" class="form-control" placeholder="User name" required="" autofocus="" />
+        <label for="password" class="sr-only">Password</label>
         <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="" />
         <div class="checkbox">
           <label>
