--- a/src/main/resources/templates/user/add.html
+++ b/src/main/resources/templates/user/add.html
@@ -9,7 +9,7 @@
 		<h3>Add User</h3>
 		 
 		
-		<form class="form-horizontal" name="textFieldForm" ng-submit="submit(textFieldForm);addPrescription(prescription, textFieldForm)">
+		<form class="form-horizontal" name="textFieldForm" ng-submit="submit(textFieldForm);addUser(user, textFieldForm)">
 		  <div th:replace="/message/validation.error.message :: validationErrorMessage" />
 		    <div class="form-group">
 		    <label for="address" class="col-sm-2 control-label">Title</label>
