--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -181,14 +181,23 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" th:href="@{/home}">CI TRACK</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
+          
+        	 <form class="navbar-form navbar-right" role="search" sec:authorize="isAuthenticated()"
+					th:action="@{/logout}" method="post">
+				<button type="submit" class="btn btn-primary">Logout</button>
+			 </form>
+			 <form class="navbar-form navbar-right">
+        		<input type="text" class="form-control" placeholder="Search..."/>
+       		 </form>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Dashboard</a></li>
+            <!-- <li><a href="#">Dashboard</a></li>
             <li><a href="#">Settings</a></li>
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Help</a></li>
+            <li><a href="#">Profile</a></li> -->
+            
+       		 <li><a href="#">Help</a></li>
           </ul>
           <ul class="nav navbar-nav pull-right">
 			<li class="dropdown" sec:authorize="isAuthenticated()">
@@ -204,13 +213,7 @@
 			</li>
 			<li sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/user/add}">Add user</a></li>
 		</ul>
-        <form class="navbar-form navbar-right">
-        	<input type="text" class="form-control" placeholder="Search..."/>
-        </form>
-        <form class="navbar-form navbar-right" role="search" sec:authorize="isAuthenticated()"
-					th:action="@{/logout}" method="post">
-			<button type="submit" class="btn btn-primary">Logout</button>
-		</form>
+       
         </div>
       </div>
     </nav>
