--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,89 +4,22 @@
 <body ng-controller="CiTrackController">
 	<div>
 		<div layout:fragment="sidebar">
-		<!-- 	<div class="panel panel-primary">
-				<div class="panel-body">
-					<h3>Advanced search</h3>
-					<hr />
-					<div class="form-group">
-						<label for="specialization" class="control-label">Specialization</label>
-						<hc-combo-div id="specialization" name="specialization"
-							ng-model="search.specialization" ng-change="search(search, 0)"
-							ng-init="specialization = search.specialization"
-							url="/rest/healthcare/specializations"
-							class="form-control col-sm-3"></hc-combo-div>
-
-
-					</div>
-
-					<div class="form-group">
-						<label for="city" class="control-label">City</label>
-						<hc-combo-div id="city" name="city" ng-model="search.city"
-							url="/cities" ng-change="search(search, 0)"
-							class="form-control col-sm-3"></hc-combo-div>
-					</div>
-
-					<div class="form-group rating">
-						<label for="ratings" class="control-label">Ratings</label>
-						<p href="#" id="ratings" class="form-control">
-							<sapn ng-repeat="p in ratingPointsArr"> <a
-								ng-click="ratingPointchnage(false,$index, search)" href="#"
-								ng-attr-title="test" ng-if="p.isActive"><span
-								class="glyphicon glyphicon-star"></span></a> <a href="#"
-								ng-click="ratingPointchnage(true,$index+1 ,search)"
-								ng-attr-title="test" ng-if="!p.isActive"><span
-								class="glyphicon glyphicon-star-empty"></span></a> &nbsp;</sapn>
-
-						</p>
-
-						<h4>
-							<a href="#" ng-click="search(search, 1)"> <span
-								class="glyphicon glyphicon-star"></span> &nbsp;<span
-								class="glyphicon glyphicon-star-empty"></span> &nbsp;<span
-								class="glyphicon glyphicon-star-empty"></span> &nbsp;<span
-								class="glyphicon glyphicon-star-empty"></span> &nbsp;<span
-								class="glyphicon glyphicon-star-empty"></span>
-							</a>
-						</h4>
-						<h4>
-							<a href="#" ng-click="search(search, 2)"> <span
-								class="glyphicon glyphicon-star"></span> &nbsp;<span
-								class="glyphicon glyphicon-star"></span> &nbsp;<span
-								class="glyphicon glyphicon-star-empty"></span> &nbsp;<span
-								class="glyphicon glyphicon-star-empty"></span> &nbsp;<span
-								class="glyphicon glyphicon-star-empty"></span>
-							</a>
-						</h4>
-						<h4>
-							<a href="#" ng-click="search(search, 3)"> <span
-								class="glyphicon glyphicon-star"></span> &nbsp;<span
-								class="glyphicon glyphicon-star"></span> &nbsp;<span
-								class="glyphicon glyphicon-star"></span> &nbsp;<span
-								class="glyphicon glyphicon-star-empty"></span> &nbsp;<span
-								class="glyphicon glyphicon-star-empty"></span>
-							</a>
-						</h4>
-						<h4>
-							<a href="#" ng-click="search(search, 4)"> <span
-								class="glyphicon glyphicon-star"></span> &nbsp;<span
-								class="glyphicon glyphicon-star"></span> &nbsp;<span
-								class="glyphicon glyphicon-star"></span> &nbsp;<span
-								class="glyphicon glyphicon-star"></span> &nbsp;<span
-								class="glyphicon glyphicon-star-empty"></span>
-							</a>
-						</h4>
-						<h4>
-							<a href="#" ng-click="search(search, 5)"> <span
-								class="glyphicon glyphicon-star"></span> &nbsp;<span
-								class="glyphicon glyphicon-star"></span> &nbsp;<span
-								class="glyphicon glyphicon-star"></span> &nbsp;<span
-								class="glyphicon glyphicon-star"></span> &nbsp;<span
-								class="glyphicon glyphicon-star"></span>
-							</a>
-						</h4>
-					</div>
-				</div>
-			</div> -->
+			<ul class="nav nav-sidebar">
+            <li> <a th:href="@{/patient/add}">Add patient</a></li>
+            <li><a th:href="@{/prescription/add}">Add prescription</a></li>
+          </ul>
+          <ul class="nav nav-sidebar">
+            <li><a href="">Nav item</a></li>
+            <li><a href="">Nav item again</a></li>
+            <li><a href="">One more nav</a></li>
+            <li><a href="">Another nav item</a></li>
+            <li><a href="">More navigation</a></li>
+          </ul>
+          <ul class="nav nav-sidebar">
+            <li><a href="">Nav item again</a></li>
+            <li><a href="">One more nav</a></li>
+            <li><a href="">Another nav item</a></li>
+          </ul> 
 		</div>
 		<div layout:fragment="content">
 			
