--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -13,12 +13,12 @@
    
     <title>Dashboard Template for Bootstrap</title>
 
+	<!-- Metro Bootstrap CSS -->
+	<link th:href="@{/lib/metro/metro-bootstrap.css}" rel="stylesheet" />
+	
     <!-- Bootstrap core CSS -->
 	<link th:href="@{/lib/bootstrap-3.3.7-dist/css/bootstrap.min.css}" rel="stylesheet" />
 	<link th:href="@{/lib/bootstrap-3.3.7-dist//css/bootstrap-theme.min.css}" rel="stylesheet" />
-	
-	!-- Metro Bootstrap CSS -->
-	<link th:href="@{/lib/metro/metro-bootstrap.css}" rel="stylesheet" />
 	
 	<!--Select2 CSS -->
 	<link th:href="@{/select2-4.0.2/dist/css/select2.min.css}"
@@ -37,7 +37,7 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script th:src="@{/lib/jquery/jquery.min.js}"></script>
+    <script th:src="@{/lib/jquery/jquery-3.2.1.min.js}"></script>
 	<script th:src="@{/lib/angularjs/angular.min.js}"></script>
 	<script th:src="@{/lib/angularjs/angular-messages.min.js}"></script>
 	<script th:src="@{/lib/bootstrap-3.3.7-dist/js/bootstrap.min.js}"></script>
@@ -184,19 +184,14 @@
           <a class="navbar-brand" th:href="@{/home}">CI TRACK</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          
-        	 <form class="navbar-form navbar-right" role="search" sec:authorize="isAuthenticated()"
+        	<form class="navbar-form navbar-right" role="search" sec:authorize="isAuthenticated()"
 					th:action="@{/logout}" method="post">
 				<button type="submit" class="btn btn-primary">Logout</button>
-			 </form>
-			 <form class="navbar-form navbar-right">
+			</form>
+			<form class="navbar-form navbar-right">
         		<input type="text" class="form-control" placeholder="Search..."/>
-       		 </form>
+       		</form>
           <ul class="nav navbar-nav navbar-right">
-            <!-- <li><a href="#">Dashboard</a></li>
-            <li><a href="#">Settings</a></li>
-            <li><a href="#">Profile</a></li> -->
-            
        		 <li><a href="#">Help</a></li>
           </ul>
           <ul class="nav navbar-nav pull-right">
@@ -224,24 +219,6 @@
 			<div id="sidebar"
 				layout:fragment="sidebar">
 			</div>	
-          <ul class="nav nav-sidebar">
-            <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Reports</a></li>
-            <li><a href="#">Analytics</a></li>
-            <li><a href="#">Export</a></li>
-          </ul>
-          <ul class="nav nav-sidebar">
-            <li><a href="">Nav item</a></li>
-            <li><a href="">Nav item again</a></li>
-            <li><a href="">One more nav</a></li>
-            <li><a href="">Another nav item</a></li>
-            <li><a href="">More navigation</a></li>
-          </ul>
-          <ul class="nav nav-sidebar">
-            <li><a href="">Nav item again</a></li>
-            <li><a href="">One more nav</a></li>
-            <li><a href="">Another nav item</a></li>
-          </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
           <div layout:fragment="content">main content</div>
