--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -62,7 +62,7 @@
               </a>
             </div>
             <div class="col-xs-6 col-sm-3 placeholder">
-            	<a th:href="@{/prescription/add}">
+            	<a th:href="@{/patient/list}">
               	<img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail"/>
               	<h3>ADD PRESCRIPTION</h3>
               </a>
