--- a/src/main/resources/templates/prescription/add.html
+++ b/src/main/resources/templates/prescription/add.html
@@ -1,9 +1,9 @@
 <html lang="en" layout:decorator="/layout" ng-app="ciTrackApp">
 <head>
 </head>
-<body ng-controller="PrescriptionController">
+<body ng-controller="PrescriptionController" th:attr="ng-init='init('+${id}+')'">
 	<div layout:fragment="sidebar">
-		<h2>Side bar</h2>
+		<h2>Side bar {{patientId}}</h2>
 	</div>
 	<div layout:fragment="content">
 		<h3>Add Prescription</h3>
