--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 		<div layout:fragment="sidebar">
 			<ul class="nav nav-sidebar">
             <li> <a th:href="@{/patient/add}">Add patient</a></li>
-            <li><a th:href="@{/prescription/add}">Add prescription</a></li>
+            <li><a th:href="@{/patient/list}">Add prescription</a></li>
           </ul>
           <ul class="nav nav-sidebar">
             <li><a href="">Nav item</a></li>
