--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -57,14 +57,14 @@
           <div class="row placeholders">
             <div class="col-xs-6 col-sm-3 placeholder">
               <a th:href="@{/patient/add}"> 
-              <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail"/>
-              <h3>ADD PATIENT</h3>
+              <img th:src="@{/images/patient1.png}" width="200" height="200" class="img-responsive" alt="Add patient"/>
+              <h3>Add Patient</h3>
               </a>
             </div>
             <div class="col-xs-6 col-sm-3 placeholder">
             	<a th:href="@{/patient/list}">
-              	<img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail"/>
-              	<h3>ADD PRESCRIPTION</h3>
+              	<img th:src="@{/images/prescription2.jpeg}" width="200" height="200" class="img-responsive" alt="Add prescription"/>
+              	<h3>Add Prescription</h3>
               </a>
             </div>
             <div class="col-xs-6 col-sm-3 placeholder">
