--- a/src/main/resources/templates/message/validation.error.message.html
+++ b/src/main/resources/templates/message/validation.error.message.html
@@ -14,6 +14,21 @@
 			Please, enter address.
   		</div>
 </script>
+<script type="text/ng-template" id="weightErrorMessage">
+  		<div ng-message="mandatory" class="notice marker-on-top bg-darkRed fg-white" style='padding: 5px;margin-top:6px'>
+			Please, enter last name.
+  		</div>
+</script>
+<script type="text/ng-template" id="heightErrorMessage">
+  		<div ng-message="mandatory" class="notice marker-on-top bg-darkRed fg-white" style='padding: 5px;margin-top:6px'>
+			Please, enter address.
+  		</div>
+</script>
+<script type="text/ng-template" id="genderErrorMessage">
+  		<div ng-message="mandatory" class="notice marker-on-top bg-darkRed fg-white" style='padding: 5px;margin-top:6px'>
+			Please, enter address.
+  		</div>
+</script>
 <script type="text/ng-template" id="drQualificationsErrorMessage">
   		<div ng-message="mandatory" class="notice marker-on-top bg-darkRed fg-white" style='padding: 5px;margin-top:6px'>
 			Please, doctor qualifications.
