--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -21,8 +21,13 @@
 	<link th:href="@{/lib/bootstrap-3.3.7-dist//css/bootstrap-theme.min.css}" rel="stylesheet" />
 	
 	<!--Select2 CSS -->
-	<link th:href="@{/select2-4.0.2/dist/css/select2.min.css}"
+	 <link th:href="@{/lib/select2-4.0.2/dist/css/select2.min.css}"
 		rel="stylesheet" />
+		
+	<link th:href="@{/lib/select2.0/select2.css}"
+		rel="stylesheet" />
+	<link th:href="@{/lib/datatable/datatables.min.css}" rel="stylesheet" />
+	
 		
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -38,10 +43,15 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script th:src="@{/lib/jquery/jquery-3.2.1.min.js}"></script>
+   
 	<script th:src="@{/lib/angularjs/angular.min.js}"></script>
 	<script th:src="@{/lib/angularjs/angular-messages.min.js}"></script>
 	<script th:src="@{/lib/bootstrap-3.3.7-dist/js/bootstrap.min.js}"></script>
 	<script th:src="@{/lib/bootstrap-3.3.7-dist/js/ui-bootstrap-tpls-1.3.0.min.js}"></script>
+	
+	<!-- <script th:src="@{/lib/jquery/jquery.js}"></script> -->
+	<script th:src="@{/lib/datatable/datatables.min.js}"></script>
+		
 	<script th:src="@{/custom/js/utils/UtilsService.js}"></script>
 	<script th:src="@{/custom/js/utils/utils.js}"></script>
 	<script th:src="@{/custom/js/component/component.js}"></script>
