--- a/src/main/resources/templates/patient/add.html
+++ b/src/main/resources/templates/patient/add.html
@@ -19,14 +19,14 @@
 		  <div class="form-group">
 		    <label for="firstName" class="col-sm-2 control-label">First name</label>
 		    <div class="col-sm-10">
-		      <ci-text-field placeholder="Enter first name"  ng-model="patient.firstName" 
+		      <ci-text-field mandatory="true" placeholder="Enter first name"  ng-model="patient.firstName" 
 		      name="firstName" errormessage="firstNameErrorMessage" />
 		    </div>
 		  </div>
 		  <div class="form-group">
 		    <label for="lastName" class="col-sm-2 control-label">Last name</label>
 		    <div class="col-sm-10">
-		      <ci-text-field placeholder="Enter last name"  ng-model="patient.lastName" name="lastName" errormessage="lastNameErrorMessage" />
+		      <ci-text-field mandatory="true" placeholder="Enter last name"  ng-model="patient.lastName" name="lastName" errormessage="lastNameErrorMessage" />
 		    </div>
 		  </div>
 		  <div class="form-group">
@@ -45,26 +45,28 @@
 		  <div class="form-group">
 		    <label for="weight" class="col-sm-2 control-label">Weight(kg)</label>
 		    <div class="col-sm-10">
-		      <ci-text-field type="number" required="false" placeholder="Enter weight in kg"  ng-model="patient.weight" name="weight" errormessage="weightErrorMessage" />
+		      <ci-text-field type="number" mandatory="false" placeholder="Enter weight in kg"  ng-model="patient.weight" name="weight" errormessage="weightErrorMessage" />
 		    </div>
 		  </div>
 		  <div class="form-group">
 		    <label for="height" class="col-sm-2 control-label">Height(cm)</label>
 		    <div class="col-sm-10">
-		      <ci-text-field type="number" required="false" placeholder="Enter height in cm"  ng-model="patient.height" name="height" errormessage="heightErrorMessage" />
+		      <ci-text-field type="number"  mandatory="false" placeholder="Enter height in cm"  ng-model="patient.height" name="height" errormessage="heightErrorMessage" />
 		    </div>
 		  </div>
 		  <div class="form-group">
 		    <label for="gender" class="col-sm-2 control-label">Gender</label>
 		    <div class="col-sm-10">
-		    {{patient}} jjj {{textFieldForm.gender.$error}}
-		     <!--  <ci-select-field   ng-model="patient.gender" name="gender" errormessage="genderErrorMessage"/> -->
-		    	<select ng-model="patient.gender" name="gender" errormessage="genderErrorMessage" ng-options="g for g in patientGender1"></select>
-		    	<div class="metro ng-active ng-hide" ng-messages="textFieldForm.gender.$error" multiple="" ng-show="fieldInteracted(textFieldForm.gender)">
+		    {{patient}} jjj {{fieldInteracted(textFieldForm.gender)}}
+		     <ci-select-field   ng-model="patient.gender" name="gender" errormessage="genderErrorMessage"/>
+		     
+		    	<!-- <select ng-model="patient.gender" name="gender" errormessage="genderErrorMessage" ng-options="g for g in patientGender1"></select>
+		    	 -->
+		    	<!-- <div class="metro ng-active ng-hide" ng-messages="textFieldForm.gender.$error" multiple="" ng-show="fieldInteracted(textFieldForm.gender)">
 			    	<div ng-message="mandatory" class="notice marker-on-top bg-darkRed fg-white ng-scope" style="padding: 5px;margin-top:6px">
 						Please, select gender.
 	  				</div>
-  				</div>
+  				</div>   -->
 		    </div>
 		  </div>
 		  <div class="form-group">
