--- a/src/main/resources/templates/message/validation.error.message.html
+++ b/src/main/resources/templates/message/validation.error.message.html
@@ -26,7 +26,7 @@
 </script>
 <script type="text/ng-template" id="genderErrorMessage">
   		<div ng-message="mandatory" class="notice marker-on-top bg-darkRed fg-white" style='padding: 5px;margin-top:6px'>
-			Please, enter address.
+			Please, select gender.
   		</div>
 </script>
 <script type="text/ng-template" id="drQualificationsErrorMessage">
