--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -62,15 +62,16 @@
               </a>
             </div>
             <div class="col-xs-6 col-sm-3 placeholder">
-            	<a th:href="@{/patient/list}">
+            	<a th:href="@{/patient/list?idf=p}">
               	<img th:src="@{/images/prescription2.jpeg}" width="200" height="200" class="img-responsive" alt="Add prescription"/>
               	<h3>Add Prescription</h3>
               </a>
             </div>
             <div class="col-xs-6 col-sm-3 placeholder">
-              <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail"/>
-              <h3>Label</h3>
-             
+            	<a th:href="@{/patient/list?idf=pl}">
+              	<img th:src="@{/images/patient1.png}" width="200" height="200" class="img-responsive" alt="Add prescription"/>
+              	<h3>View Patients</h3>
+              </a>
             </div>
             <div class="col-xs-6 col-sm-3 placeholder">
               <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail"/>
