--- a/src/main/resources/templates/patient/list.html
+++ b/src/main/resources/templates/patient/list.html
@@ -1,15 +1,18 @@
 <html lang="en" layout:decorator="/layout" ng-app="ciTrackApp">
 <head>
 </head>
-<body ng-controller="PatientController" th:attr="ng-init='loadAllPatient()'">
+<body ng-controller="PatientController" th:attr="ng-init='loadAllPatient(\''+${idf}+'\')'">
 	<div layout:fragment="sidebar">
-		<h2>Actions</h2>
+		<h3>Actions</h3>
 		<hr/>
 	
 	</div>
 	<div layout:fragment="content">
-		<h3>Patient details</h3>
+		<h3 ng-if="idf =='p'">Add prescription</h3>
+		<p ng-if="idf =='p'" style="font-style: italic;">Please, select patient to add prescription</p>
+		<h3 ng-if="idf =='pl'">Patient details</h3>
 		
+		<hr/>
 		<table class="table" id="patients">
 			<!-- <thead>
 			<tr>
