--- a/src/main/resources/templates/patient/view.html
+++ b/src/main/resources/templates/patient/view.html
@@ -3,12 +3,19 @@
 </head>
 <body ng-controller="PatientController" th:attr="ng-init='init('+${id}+')'">
 	<div layout:fragment="sidebar">
-		<h2>Actions</h2>
+		<h3>Actions</h3>
 		<hr/>
-	
+		<div class="row placeholders">
+			<div class="col-xs-8 col-sm-8 placeholder">
+	            	<a  th:href="@{/prescription/add/}+${id}">
+	              	<img th:src="@{/images/prescription2.jpeg}" width="200" height="200" class="img-responsive" alt="Add prescription"/>
+	              	<strong>Add Prescription</strong>
+	              </a>
+	        </div>
+		</div>
 	</div>
 	<div layout:fragment="content">
-		<h3>Patient details</h3>
+		<h4>Patient details</h4>
 		
 		<table class="table">
 			<tr>
@@ -26,6 +33,18 @@
 			<tr>
 				<th>Age</th>
 				<td>{{patient.age}}</td>
+			</tr>
+			<tr>
+				<th>Gender</th>
+				<td>{{patient.gender}}</td>
+			</tr>
+			<tr>
+				<th>Height(cm)</th>
+				<td>{{patient.height}}</td>
+			</tr>
+			<tr>
+				<th>Weight(kg)</th>
+				<td>{{patient.weight}}</td>
 			</tr>
 			<tr>
 				<th>Address</th>
