--- a/src/main/resources/templates/message/validation.error.message.html
+++ b/src/main/resources/templates/message/validation.error.message.html
@@ -39,9 +39,21 @@
 			Please, choose user name.
   		</div>
 </script>
+
 <script type="text/ng-template" id="passwordErrorMessage">
   		<div ng-message="mandatory" class="notice marker-on-top bg-darkRed fg-white" style='padding: 5px;margin-top:6px'>
 			Please, choose password.
+  		</div>
+</script>
+
+<script type="text/ng-template" id="defaultErrorMessage">
+  		<div ng-message="mandatory" class="notice marker-on-top bg-darkRed fg-white" style='padding: 5px;margin-top:6px'>
+			Please, enter field value.
+  		</div>
+</script>
+<script type="text/ng-template" id="medicationDescErrorMessage">
+  		<div ng-message="mandatory" class="notice marker-on-top bg-darkRed fg-white" style='padding: 5px;margin-top:6px'>
+			Please, enter the medication description.
   		</div>
 </script>
 </div>
